update + on hold

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <a class="nav-link" href="#">Sign in</a>
                 </li>
               </ul>
-              <button class="button-v1">Get started</button>
+              <button class="button-v1" id="get-started">Get started</button>
             </div>
           </div>
         </nav>
@@ -74,15 +74,17 @@
       <div class="container header-container">
         <div class="row">
           <div class="col-lg-8 header-text">
-            <h1>Stay curious</h1>
+            <h1>Stay curious.</h1>
             <p>
               Discover stories, thinking, and expertise <br />
               from writers on any topic.
             </p>
             <button class="button-v1">Start reading</button>
           </div>
-          <div class="col-lg-4 header-img">
-            <img src="https://picsum.photos/400" alt="" />
+          <div class="col-lg-4">
+            <div class="header-img">
+              <img src="images/lorem.png" alt="" />
+            </div>
           </div>
         </div>
       </div>
@@ -101,7 +103,7 @@
             <div class="blog-number">01</div>
             <div class="blog-info">
               <div class="blog-author">
-                <img src="https://picsum.photos/50" alt="" />
+                <img src="images/lorem.png" alt="" />
                 <h5>John Doe</h5>
               </div>
               <h4 class="blog-title">Lorem ipsum dolor sit amet.</h4>
@@ -114,7 +116,7 @@
             <div class="blog-number">01</div>
             <div class="blog-info">
               <div class="blog-author">
-                <img src="https://picsum.photos/50" alt="" />
+                <img src="images/lorem.png" alt="" />
                 <h5>John Doe</h5>
               </div>
               <h4 class="blog-title">Lorem ipsum dolor sit amet.</h4>
@@ -127,7 +129,7 @@
             <div class="blog-number">01</div>
             <div class="blog-info">
               <div class="blog-author">
-                <img src="https://picsum.photos/50" alt="" />
+                <img src="images/lorem.png" alt="" />
                 <h5>John Doe</h5>
               </div>
               <h4 class="blog-title">Lorem ipsum dolor sit amet.</h4>
@@ -142,7 +144,7 @@
             <div class="blog-number">01</div>
             <div class="blog-info">
               <div class="blog-author">
-                <img src="https://picsum.photos/50" alt="" />
+                <img src="images/lorem.png" alt="" />
                 <h5>John Doe</h5>
               </div>
               <h4 class="blog-title">Lorem ipsum dolor sit amet.</h4>
@@ -155,7 +157,7 @@
             <div class="blog-number">01</div>
             <div class="blog-info">
               <div class="blog-author">
-                <img src="https://picsum.photos/50" alt="" />
+                <img src="images/lorem.png" alt="" />
                 <h5>John Doe</h5>
               </div>
               <h4 class="blog-title">Lorem ipsum dolor sit amet.</h4>
@@ -168,7 +170,7 @@
             <div class="blog-number">01</div>
             <div class="blog-info">
               <div class="blog-author">
-                <img src="https://picsum.photos/50" alt="" />
+                <img src="images/lorem.png" alt="" />
                 <h5>John Doe</h5>
               </div>
               <h4 class="blog-title">Lorem ipsum dolor sit amet.</h4>
@@ -184,10 +186,10 @@
     <section class="section-articles">
       <div class="container articles-container">
         <div class="row">
-          <div class="col-lg-5">
+          <div class="col-lg-5 article-col">
             <div class="blog-info">
               <div class="blog-author">
-                <img src="https://picsum.photos/50" alt="" />
+                <img src="images/lorem.png" alt="" />
                 <h5>John Doe</h5>
               </div>
               <h4 class="article-title">Lorem ipsum dolor sit amet.</h4>
@@ -200,28 +202,101 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3"></div>
-          <div class="col-lg-4"></div>
+          <div class="col-lg-3">
+            <div class="article-img">
+              <img src="images/lorem.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-4 side-tags-col">
+            <div class="side-tags">
+              <p>Discover more of what matters to you</p>
+              <div>
+                <a href="" class="tag-button">lorem</a>
+                <a href="" class="tag-button">lorem sit</a>
+                <a href="" class="tag-button">sit</a>
+              </div>
+              <div>
+                <a href="" class="tag-button">amet</a>
+                <a href="" class="tag-button">lorem amet</a>
+                <a href="" class="tag-button">lorem</a>
+              </div>
+              <div>
+                <a href="" class="tag-button">lorem ipsum</a>
+                <a href="" class="tag-button">dolor</a>
+                <a href="" class="tag-button">ipsum</a>
+              </div>
+              <a href="">See more topics</a>
+            </div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-lg-5">
+          <div class="col-lg-5 article-col">
             <div class="blog-info">
               <div class="blog-author">
-                <img src="https://picsum.photos/50" alt="" />
+                <img src="images/lorem.png" alt="" />
                 <h5>John Doe</h5>
               </div>
               <h4 class="article-title">Lorem ipsum dolor sit amet.</h4>
               <h4 class="article-intro">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Cupiditate quidem magni facere saepe molestias animi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                non?
               </h4>
               <div class="description-small">
                 <p>Nov 9 · 8 min read</p>
               </div>
             </div>
           </div>
-          <div class="col-lg-3"></div>
-          <div class="col-lg-4"></div>
+          <div class="col-lg-3">
+            <div class="article-img">
+              <img src="images/lorem.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-5 article-col">
+            <div class="blog-info">
+              <div class="blog-author">
+                <img src="images/lorem.png" alt="" />
+                <h5>John Doe</h5>
+              </div>
+              <h4 class="article-title">Lorem ipsum dolor sit amet.</h4>
+              <h4 class="article-intro">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                non?
+              </h4>
+              <div class="description-small">
+                <p>Nov 9 · 8 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="article-img">
+              <img src="images/lorem.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-5 article-col">
+            <div class="blog-info">
+              <div class="blog-author">
+                <img src="images/lorem.png" alt="" />
+                <h5>John Doe</h5>
+              </div>
+              <h4 class="article-title">Lorem ipsum dolor sit amet.</h4>
+              <h4 class="article-intro">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                non?
+              </h4>
+              <div class="description-small">
+                <p>Nov 9 · 8 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="article-img">
+              <img src="images/lorem.png" alt="" />
+            </div>
+          </div>
         </div>
       </div>
     </section>
